--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- 2️⃣ TETRAHEDRAL GEOMETRY -->
 <section>
   <h2>2️⃣ Tetrahedral Geometry</h2>
-  <img class="tetra" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Methane-3D-balls.png/320px-Methane-3D-balls.png" alt="Tetrahedral methane">
+  <img class="tetra" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Methane-2D-dimensions.svg/1280px-Methane-2D-dimensions.svg.png" alt="Tetrahedral methane">
   <p>Each carbon in alkanes sits at the centre of a <strong>tetrahedron</strong> with bond angles of <strong>109.5 °</strong>.</p>
 </section>
 
